--- a/progetto/src/index.css
+++ b/progetto/src/index.css
@@ -69,6 +69,7 @@ code {
 
 .artElement {
   display: flex;
+  justify-content: space-between;
 }
 
 .eventElement {
@@ -83,4 +84,17 @@ code {
 .favoriteShow {
   top: 5px;
   right: 5px;
+  font-size: 24px;
+  margin-left: 10px;
+  margin-right: 10px;
+  justify-content: flex-end;
+}
+
+.imageFullShow {
+  max-width: 600px;
+  max-height: 600px;
+}
+
+.closeButton {
+  font-size: 30px;
 }
